# symfreq

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish_to_crates.yml  release.yml
src/: lib.rs  main.rs
symfreq/: Cargo.toml
symfreq-cli/: Cargo.toml
symfreq-cli/src/: main.rs
symfreq-cli/tests/fixtures/: simple.js  simple.txt
symfreq/src/: lib.rs
symfreq/tests/: count_percentages.rs  count_symbols.rs  read_path.rs
tests/: read_path.rs  sorted_percentages.rs
